# ta-ml-model-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py  tox.ini
.github/workflows/: lint.yaml
app/: __init__.py  config.py  logger.py  routes.py  schemas.py
docker/: Dockerfile
models/: model.onnx
tests/: test_basic.py
tests/app/routes/: test_predict.py
