[tool.poetry]
name = "ta-ml-model-api"
version = "0.1.0"
description = ""
authors = ["Renato Ramos <renatoramossilva@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
pytest = "^8.3.3"
onnxruntime = "^1.19.2"
coverage = "^7.6.1"
pydantic = "^2.9.2"
black = "^24.8.0"
pylint = "^3.3.1"
isort = "^5.13.2"
tox = "^4.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
